crates/perl-lsp-rs/tests/snapshots/lsp_pull_diag_snap__document_diagnostic_unchanged_report.snap
---
source: crates/perl-lsp-rs/tests/lsp_pull_diagnostics_snapshot_test.rs
expression: unchanged
---
kind: unchanged
resultId: "<stable-result-id>"
